Add Maven build and VS Code setup to compile and run on modern JDK
The archived source shipped without any build system or dependency jars.
This adds a Maven build (pom.xml) that compiles the 2004-era sancho-src/src
tree and launches the SWT GUI on JDK 17+ (verified on Temurin 25, Windows).

- pom.xml: source dir sancho-src/src, resources bundled; dependencies resolved
  from Maven Central (SWT win32 + JFace, GNU Trove 2.x, GNU RegExp, JSch).
- Vendor the deprecated Eclipse classes removed from modern SWT/JFace
  (org.eclipse.swt.custom.TableTree, TableTreeEditor and
  org.eclipse.jface.viewers.TableTreeViewer) so the TableTree-based download
  views still compile; three minimal patches align them with the repo's
  already-patched TableTreeItem.
- local-repo/: signature-stripped SWT/JFace jars consumed via a project-local
  Maven repository, since the JVM refuses to load the vendored classes into the
  signed Eclipse packages. Regenerate with tools/unsign-libs.ps1.
- .vscode/: "Sancho (GUI)" launch config with the required VM args
  (--enable-native-access, legacy merge sort) and Java editor settings.
- README: build/run instructions and notes on the dependency handling.
- .gitignore: ignore target/ and cp.txt build output.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>